[package]
name = "fn_zip"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Provides a zip trait for functions, allowing two functions to be combined at compile-time before being called."
repository = "https://github.com/sigurd4/fn_zip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
moddef = "0.2.6"
tupleops = {version = "0.1.1", default-features = false, features = ["concat"]}
tuple_split = {version = "0.2.4", default-features = false}

[features]
default = []
async =  []

[dev-dependencies]
tokio = {version = "*", features = ["rt", "macros"]}